--- a/.github/workflows/publish_wheel.yml
+++ b/.github/workflows/publish_wheel.yml
@@ -10,6 +10,9 @@ on:
         description: "Branch or tag to publish"
         required: true
         default: "main"
+  push:
+    branches:
+      - cj/ci  # Temporary: trigger once to register workflow
 
 jobs:
   build_wheels:
