--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,13 +57,15 @@ build-frontend = "build[uv]"
 
 # Run tests after building
 test-command = "pytest {package}/tests -vvs"
-test-requires = ["pytest", "numpy"]
+test-requires = ["pytest", "numpy", "ninja"]
 
 [tool.cibuildwheel.linux]
 archs = ["x86_64", "aarch64"]
+repair-wheel-command = "auditwheel repair --exclude libtvm_ffi.so -w {dest_dir} {wheel}"
 
 [tool.cibuildwheel.macos]
 archs = ["x86_64", "arm64"]
+repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel} --exclude libtvm_ffi.dylib --ignore-missing-dependencies"
 
 [tool.cibuildwheel.windows]
 archs = ["AMD64"]
