--- a/.github/workflows/publish_wheel.yml
+++ b/.github/workflows/publish_wheel.yml
@@ -27,11 +27,11 @@ jobs:
           - {os: macos-14, arch: arm64}
 
     steps:
+      - uses: astral-sh/setup-uv@b75a909f75acd358c2196fb9a5f1299a9a8868a4  # v6.7.0
+
       - uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.inputs.ref || github.ref }}
-
-      - uses: astral-sh/setup-uv@b75a909f75acd358c2196fb9a5f1299a9a8868a4  # v6.7.0
+          ref: ${{ github.event.inputs.ref }}
 
       - uses: ./.github/actions/detect-env-vars
         id: env_vars
@@ -84,7 +84,8 @@ jobs:
     permissions:
       id-token: write
       attestations: write
-    if: github.event_name == 'workflow_dispatch'
+    # if: github.event_name == 'workflow_dispatch'
+    if: github.event_name == 'push'
     steps:
       - uses: actions/download-artifact@v4
         with:
