--- a/.github/workflows/publish_wheel.yml
+++ b/.github/workflows/publish_wheel.yml
@@ -10,9 +10,6 @@ on:
         description: "Branch or tag to publish"
         required: true
         default: "main"
-  push:
-    branches:
-      - cj/ci  # Temporary: trigger once to register workflow
 
 jobs:
   build_wheels:
@@ -84,8 +81,7 @@ jobs:
     permissions:
       id-token: write
       attestations: write
-    # if: github.event_name == 'workflow_dispatch'
-    if: github.event_name == 'push'
+    if: github.event_name == 'workflow_dispatch'
     steps:
       - uses: actions/download-artifact@v4
         with:
@@ -104,6 +100,5 @@ jobs:
         with:
           attestations: true
           verbose: true
-          skip-existing: true
           # Uncomment to test on TestPyPI first:
-          repository-url: https://test.pypi.org/legacy/
+          # repository-url: https://test.pypi.org/legacy/
