--- a/.github/workflows/publish_wheel.yml
+++ b/.github/workflows/publish_wheel.yml
@@ -10,6 +10,9 @@ on:
         description: "Branch or tag to publish"
         required: true
         default: "main"
+  push:
+    branches:
+      - cj/ci  # Temporary: trigger once to register workflow
 
 jobs:
   build_wheels:
@@ -101,4 +104,4 @@ jobs:
           attestations: true
           verbose: true
           # Uncomment to test on TestPyPI first:
-          # repository-url: https://test.pypi.org/legacy/
+          repository-url: https://test.pypi.org/legacy/
