Revert "test new test dep"
This reverts commit 6c834d8b88b76772655630d170c71fb745059d08.

--- a/.github/workflows/publish_wheel.yml
+++ b/.github/workflows/publish_wheel.yml
@@ -10,9 +10,6 @@ on:
         description: "Branch or tag to publish"
         required: true
         default: "main"
-  push:
-    branches:
-      - cj/ci  # Temporary: trigger once to register workflow
 
 jobs:
   build_wheels:
@@ -104,4 +101,4 @@ jobs:
           attestations: true
           verbose: true
           # Uncomment to test on TestPyPI first:
-          repository-url: https://test.pypi.org/legacy/
+          # repository-url: https://test.pypi.org/legacy/
