--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 [project]
 name = "jax-tvm-ffi"
-version = "0.1.0"
+version = "0.1.1"
 
 license = { text = "Apache 2.0" }
 classifiers = [
@@ -32,7 +32,7 @@ build.verbose = true
 
 # CMake configuration
 cmake.version = "CMakeLists.txt"
-cmake.build-type = "RelWithDebugInfo"
+cmake.build-type = "Release"
 
 # Logging
 logging.level = "INFO"
